--- a/app/category.html
+++ b/app/category.html
@@ -44,69 +44,69 @@
             <span></span>
           </div>
           <div class="header__adaptive">
-          <ul class="header__adaptive-menu">
-            <li class="header__adaptive-item">
-              <a class="header__adaptive-link" href="#">
-                Контрагентам
-              </a>
-            </li>
-            <li class="header__adaptive-item">
-              <a class="header__adaptive-link" href="#">
-                Дизайнерам
-              </a>
-            </li>
-            <li class="header__adaptive-item">
-              <a class="header__adaptive-link" href="#">
-                Вакансии
-              </a>
-            </li>
-            <li class="header__adaptive-item">
-              <a class="header__adaptive-link" href="#">
-              Вход
-              </a>/
-              <a class="header__adaptive-link" href="#">
-                Регистрация
-              </a>
-            </li>
-          </ul>
-          <div class="header__adaptive-profile">
-            <a class="header__adaptive-user" href="#">
-              <img class="header__adaptive-img" src="images/user-adaptive.svg" alt="images">
-            </a>
-            <a class="header__adaptive-favorite" href="#">
-              <img class="header__adaptive-img" src="images/favorit-adaptive.svg" alt="images">
-            </a>
-          </div>
-          <div class="header__adaptive-social">
-            <ul class="header__adaptive-social-list">
-              <li class="header__adaptive-social-item">
-                <a class="header__adaptive-social-link" href="#">
-                  <img class="header__adaptive-social-img" src="images/adaptive-youtube.svg" alt="youtube">
+            <ul class="header__adaptive-menu">
+              <li class="header__adaptive-item">
+                <a class="header__adaptive-link" href="#">
+                  Контрагентам
                 </a>
               </li>
-              <li class="header__adaptive-social-item">
-                <a class="header__adaptive-social-link" href="#">
-                  <img class="header__adaptive-social-img" src="images/adaptive-vkontakte.svg" alt="vkontakte">
+              <li class="header__adaptive-item">
+                <a class="header__adaptive-link" href="#">
+                  Дизайнерам
                 </a>
               </li>
-              <li class="header__adaptive-social-item">
-                <a class="header__adaptive-social-link" href="#">
-                  <img class="header__adaptive-ocial-img" src="images/adaptive-facebook.svg" alt="facebook">
+              <li class="header__adaptive-item">
+                <a class="header__adaptive-link" href="#">
+                  Вакансии
                 </a>
               </li>
-              <li class="header__adaptive-social-item">
-                <a class="header__adaptive-social-link" href="#">
-                  <img class="header__adaptive-social-img" src="images/adaptive-telegram.svg" alt="telegram">
-                </a>
-              </li>
-              <li class="header__adaptive-social-item">
-                <a class="header__adaptive-social-link" href="#">
-                  <img class="header__adaptive-social-img" src="images/adaptive-ethernet.svg" alt="ethernet">
+              <li class="header__adaptive-item">
+                <a class="header__adaptive-link" href="#">
+                  Вход
+                </a>/
+                <a class="header__adaptive-link" href="#">
+                  Регистрация
                 </a>
               </li>
             </ul>
+            <div class="header__adaptive-profile">
+              <a class="header__adaptive-user" href="#">
+                <img class="header__adaptive-img" src="images/user-adaptive.svg" alt="images">
+              </a>
+              <a class="header__adaptive-favorite" href="#">
+                <img class="header__adaptive-img" src="images/favorit-adaptive.svg" alt="images">
+              </a>
+            </div>
+            <div class="header__adaptive-social">
+              <ul class="header__adaptive-social-list">
+                <li class="header__adaptive-social-item">
+                  <a class="header__adaptive-social-link" href="#">
+                    <img class="header__adaptive-social-img" src="images/adaptive-youtube.svg" alt="youtube">
+                  </a>
+                </li>
+                <li class="header__adaptive-social-item">
+                  <a class="header__adaptive-social-link" href="#">
+                    <img class="header__adaptive-social-img" src="images/adaptive-vkontakte.svg" alt="vkontakte">
+                  </a>
+                </li>
+                <li class="header__adaptive-social-item">
+                  <a class="header__adaptive-social-link" href="#">
+                    <img class="header__adaptive-ocial-img" src="images/adaptive-facebook.svg" alt="facebook">
+                  </a>
+                </li>
+                <li class="header__adaptive-social-item">
+                  <a class="header__adaptive-social-link" href="#">
+                    <img class="header__adaptive-social-img" src="images/adaptive-telegram.svg" alt="telegram">
+                  </a>
+                </li>
+                <li class="header__adaptive-social-item">
+                  <a class="header__adaptive-social-link" href="#">
+                    <img class="header__adaptive-social-img" src="images/adaptive-ethernet.svg" alt="ethernet">
+                  </a>
+                </li>
+              </ul>
+            </div>
           </div>
-        </div>
           <ul class="profile__list">
             <li class="profile__list-item">
               <form class="profile__form" action="/search/">
@@ -138,7 +138,7 @@
       </div>
     </header>
 
-    
+
 
 
 
@@ -206,7 +206,7 @@
             </div>
           </div>
 
-         <div class="catalog__box">
+          <div class="catalog__box">
             <ul class="catalog__items">
               <li class="catalog__item">
                 <a class="catalog__item-link" href="#">
@@ -273,13 +273,13 @@
             </li>
           </ul>
           <div class="catalog__btn">
-          <a class="catalog__btn-link" href="#">
-            покажите еще
-          </a>
-        </div>
+            <a class="catalog__btn-link" href="#">
+              покажите еще
+            </a>
+          </div>
         </div>
       </section>
-      
+
       <div class="information">
         <div class="container">
           <div class="information__inner">
@@ -378,7 +378,8 @@
             </li>
             <li class="mailing__list-item">
               Доставка и оформление
-            </li> <li class="mailing__list-item">
+            </li>
+            <li class="mailing__list-item">
               Индивидуальный дизайн
             </li>
           </ul>
@@ -444,7 +445,7 @@
             </h6>
             <a class="footer__item-phone" href="tel:88122345655">8 (812) 234-56-55</a>
             <a class="footer__item-phone" href="tel:88122345655">8 (812) 234-56-55</a>
-            <a class="footer__item-email" href="email:ojjo@ojjo.ru">ojjo@ojjo.ru</a>
+            <a class="footer__item-email" href="mailto:ojjo@ojjo.ru">ojjo@ojjo.ru</a>
           </div>
           <div class="footer__item">
             <h6 class="footer__title">
