--- a/app/contact.html
+++ b/app/contact.html
@@ -195,10 +195,10 @@
               <h6 class="contact__item-title">
                 E-mail
               </h6>
-              <a class="contact__item-email" href="email:office@ojjo.com">
+              <a class="contact__item-email" href="mailto:office@ojjo.com">
                 office@ojjo.com
               </a>
-              <a class="contact__item-email" href="email:sales@ojjo.com">
+              <a class="contact__item-email" href="mailto:sales@ojjo.com">
                 sales@ojjo.com
               </a>
             </div>
@@ -279,7 +279,7 @@
             </h6>
             <a class="footer__item-phone" href="tel:88122345655">8 (812) 234-56-55</a>
             <a class="footer__item-phone" href="tel:88122345655">8 (812) 234-56-55</a>
-            <a class="footer__item-email" href="email:ojjo@ojjo.ru">ojjo@ojjo.ru</a>
+            <a class="footer__item-email" href="mailto:ojjo@ojjo.ru">ojjo@ojjo.ru</a>
           </div>
           <div class="footer__item">
             <h6 class="footer__title">
