--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,6 @@
       <header class="header">
         <div class="container-top">
           <div class="header__inner">
-            
             <nav class="menu">
               <ul class="menu__list">
                 <li class="menu__list-item">
@@ -46,69 +45,69 @@
               <span></span>
             </div>
             <div class="header__adaptive">
-            <ul class="header__adaptive-menu">
-              <li class="header__adaptive-item">
-                <a class="header__adaptive-link" href="#">
-                  Контрагентам
-                </a>
-              </li>
-              <li class="header__adaptive-item">
-                <a class="header__adaptive-link" href="#">
-                  Дизайнерам
-                </a>
-              </li>
-              <li class="header__adaptive-item">
-                <a class="header__adaptive-link" href="#">
-                  Вакансии
-                </a>
-              </li>
-              <li class="header__adaptive-item">
-                <a class="header__adaptive-link" href="#">
-                Вход
-                </a>/
-                <a class="header__adaptive-link" href="#">
-                  Регистрация
-                </a>
-              </li>
-            </ul>
-            <div class="header__adaptive-profile">
-              <a class="header__adaptive-user" href="#">
-                <img class="header__adaptive-img" src="images/user-adaptive.svg" alt="images">
-              </a>
-              <a class="header__adaptive-favorite" href="#">
-                <img class="header__adaptive-img" src="images/favorit-adaptive.svg" alt="images">
-              </a>
-            </div>
-            <div class="header__adaptive-social">
-              <ul class="header__adaptive-social-list">
-                <li class="header__adaptive-social-item">
-                  <a class="header__adaptive-social-link" href="#">
-                    <img class="header__adaptive-social-img" src="images/adaptive-youtube.svg" alt="youtube">
+              <ul class="header__adaptive-menu">
+                <li class="header__adaptive-item">
+                  <a class="header__adaptive-link" href="#">
+                    Контрагентам
                   </a>
                 </li>
-                <li class="header__adaptive-social-item">
-                  <a class="header__adaptive-social-link" href="#">
-                    <img class="header__adaptive-social-img" src="images/adaptive-vkontakte.svg" alt="vkontakte">
+                <li class="header__adaptive-item">
+                  <a class="header__adaptive-link" href="#">
+                    Дизайнерам
                   </a>
                 </li>
-                <li class="header__adaptive-social-item">
-                  <a class="header__adaptive-social-link" href="#">
-                    <img class="header__adaptive-ocial-img" src="images/adaptive-facebook.svg" alt="facebook">
+                <li class="header__adaptive-item">
+                  <a class="header__adaptive-link" href="#">
+                    Вакансии
                   </a>
                 </li>
-                <li class="header__adaptive-social-item">
-                  <a class="header__adaptive-social-link" href="#">
-                    <img class="header__adaptive-social-img" src="images/adaptive-telegram.svg" alt="telegram">
-                  </a>
-                </li>
-                <li class="header__adaptive-social-item">
-                  <a class="header__adaptive-social-link" href="#">
-                    <img class="header__adaptive-social-img" src="images/adaptive-ethernet.svg" alt="ethernet">
+                <li class="header__adaptive-item">
+                  <a class="header__adaptive-link" href="#">
+                    Вход
+                  </a>/
+                  <a class="header__adaptive-link" href="#">
+                    Регистрация
                   </a>
                 </li>
               </ul>
+              <div class="header__adaptive-profile">
+                <a class="header__adaptive-user" href="#">
+                  <img class="header__adaptive-img" src="images/user-adaptive.svg" alt="images">
+                </a>
+                <a class="header__adaptive-favorite" href="#">
+                  <img class="header__adaptive-img" src="images/favorit-adaptive.svg" alt="images">
+                </a>
+              </div>
+              <div class="header__adaptive-social">
+                <ul class="header__adaptive-social-list">
+                  <li class="header__adaptive-social-item">
+                    <a class="header__adaptive-social-link" href="#">
+                      <img class="header__adaptive-social-img" src="images/adaptive-youtube.svg" alt="youtube">
+                    </a>
+                  </li>
+                  <li class="header__adaptive-social-item">
+                    <a class="header__adaptive-social-link" href="#">
+                      <img class="header__adaptive-social-img" src="images/adaptive-vkontakte.svg" alt="vkontakte">
+                    </a>
+                  </li>
+                  <li class="header__adaptive-social-item">
+                    <a class="header__adaptive-social-link" href="#">
+                      <img class="header__adaptive-ocial-img" src="images/adaptive-facebook.svg" alt="facebook">
+                    </a>
+                  </li>
+                  <li class="header__adaptive-social-item">
+                    <a class="header__adaptive-social-link" href="#">
+                      <img class="header__adaptive-social-img" src="images/adaptive-telegram.svg" alt="telegram">
+                    </a>
+                  </li>
+                  <li class="header__adaptive-social-item">
+                    <a class="header__adaptive-social-link" href="#">
+                      <img class="header__adaptive-social-img" src="images/adaptive-ethernet.svg" alt="ethernet">
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </div>
-          </div>
             <ul class="profile__list">
               <li class="profile__list-item">
                 <form class="profile__form" action="/search/">
@@ -341,7 +340,7 @@
                 <img class="assortment__img" src="images/assortment/4.jpg" alt="images">
                 <span>часы</span>
               </a>
-            </div> 
+            </div>
 
             <div class="assortment__items mix rarity">
               <a class="assortment__item" href="#">
@@ -371,7 +370,7 @@
             </div>
           </div>
         </div>
-      </section>  
+      </section>
 
       <section class="advertising">
         <div class="advertising__pretitle">
@@ -389,7 +388,7 @@
         <a class="advertising__btn" href="#">
           наши салоны
         </a>
-      </section> 
+      </section>
 
       <section class="blog">
         <div class="container">
@@ -429,73 +428,78 @@
             читать наш блог
           </a>
         </div>
-      </section> 
+      </section>
 
       <div class="gallery">
         <div class="container">
-        <div class="gallery__pretitle">
-          #ojjo_jewerly
-        </div>
-        <h4 class="gallery__title">
-          Мы в социальных сетях
-        </h4>
-        <div class="gallery__inner">
-          <div class="gallery__item gallery__popup-box">
-            <img class="gallery__item-popupimg" src="images/popup-gallery1.jpg" alt="images">
-            <a class="gallery__item-popup" data-fancybox href="https://youtu.be/LbkkniJ69LA">
-              <img class="gallery__popup-imgbtn" src="images/play.svg" alt="play button">
+          <div class="gallery__pretitle">
+            #ojjo_jewerly
+          </div>
+          <h4 class="gallery__title">
+            Мы в социальных сетях
+          </h4>
+          <div class="gallery__inner">
+            <div class="gallery__item gallery__popup-box">
+              <a class="gallery__item-popup"  data-fancybox href="https://youtu.be/LbkkniJ69LA">
+                  <img class="gallery__item-popupimg" src="images/popup-gallery1.jpg" alt="images">
+              </a>
+              <a class="gallery__popup-btn" data-fancybox href="https://youtu.be/LbkkniJ69LA">
+                <img class="gallery__popup-imgbtn" src="images/play.svg" alt="play button">
+              </a>
+            </div>
+            <a class="gallery__item" data-fancybox="gallery" href="images/gallery-img1.jpg">
+              <img class="gallery__item-img" src="images/gallery-img1.jpg" alt="images">
             </a>
-          </div>
-          <a class="gallery__item" href="#">
-            <img class="gallery__item-img" src="images/gallery-img1.jpg" alt="images">
-          </a>
-          <a class="gallery__item" href="#">
-            <img class="gallery__item-img" src="images/gallery-img2.jpg" alt="images">
-          </a>
-          <a class="gallery__item" href="#">
-            <img class="gallery__item-img" src="images/gallery-img3.jpg" alt="images">
-          </a>
-          <a class="gallery__item" href="#">
-            <img class="gallery__item-img" src="images/gallery-img4.jpg" alt="images">
-          </a>
-          <div class="gallery__item gallery__popup-box">
-            <img class="gallery__item-popupimg" src="images/popup-gallery2.jpg" alt="images">
-            <a class="gallery__item-popup" data-fancybox href="https://youtu.be/LbkkniJ69LA">
-              <img class="gallery__popup-imgbtn" src="images/play.svg" alt="play button">
+            <a class="gallery__item" data-fancybox="gallery" href="images/gallery-img2.jpg">
+              <img class="gallery__item-img" src="images/gallery-img2.jpg" alt="images">
             </a>
-          </div>
-          </div>
-        </div>
-        </div>
-
-        <section class="mailing">
-          <div class="mailing__pretitle">
-            Полезные советы и персональный предложения
-          </div>
-          <h5 class="mailing__title">
-            Эксклюзивная рассылка
-          </h5>
-          <div class="mailing__inner">
-            <ul class="mailing__list">
-              <li class="mailing__list-item">
-                Личный менеджер
-              </li>
-              <li class="mailing__list-item">
-                Доставка и оформление
-              </li> <li class="mailing__list-item">
-                Индивидуальный дизайн
-              </li>
-            </ul>
-            <div class="mailing__border">
-              <form class="mailing__form">
-                <input class="mailing__form-input" type="email" placeholder="Ваш e-mail">
-                <button class="mailing__form-btn">
-                  отправить
-                </button>
-              </form>
+            <a class="gallery__item" data-fancybox="gallery" href="images/gallery-img3.jpg">
+              <img class="gallery__item-img" src="images/gallery-img3.jpg" alt="images">
+            </a>
+            <a class="gallery__item" data-fancybox="gallery" href="images/gallery-img4.jpg">
+              <img class="gallery__item-img" src="images/gallery-img4.jpg" alt="images">
+            </a>
+            <div class="gallery__item gallery__popup-box">
+              <a class="gallery__item-popup" data-fancybox href="https://youtu.be/LbkkniJ69LA">
+                <img class="gallery__item-popupimg" src="images/popup-gallery2.jpg" alt="images">
+              </a>
+              <a class="gallery__popup-btn" data-fancybox href="https://youtu.be/LbkkniJ69LA">
+                <img class="gallery__popup-imgbtn" src="images/play.svg" alt="play button">
+              </a>
             </div>
           </div>
-        </section>
+        </div>
+      </div>
+
+      <section class="mailing">
+        <div class="mailing__pretitle">
+          Полезные советы и персональный предложения
+        </div>
+        <h5 class="mailing__title">
+          Эксклюзивная рассылка
+        </h5>
+        <div class="mailing__inner">
+          <ul class="mailing__list">
+            <li class="mailing__list-item">
+              Личный менеджер
+            </li>
+            <li class="mailing__list-item">
+              Доставка и оформление
+            </li>
+            <li class="mailing__list-item">
+              Индивидуальный дизайн
+            </li>
+          </ul>
+          <div class="mailing__border">
+            <form class="mailing__form">
+              <input class="mailing__form-input" type="email" placeholder="Ваш e-mail">
+              <button class="mailing__form-btn">
+                отправить
+              </button>
+            </form>
+          </div>
+        </div>
+      </section>
 
     </main>
 
@@ -549,7 +553,7 @@
             </h6>
             <a class="footer__item-phone" href="tel:88122345655">8 (812) 234-56-55</a>
             <a class="footer__item-phone" href="tel:88122345655">8 (812) 234-56-55</a>
-            <a class="footer__item-email" href="email:ojjo@ojjo.ru">ojjo@ojjo.ru</a>
+            <a class="footer__item-email" href="mailto:ojjo@ojjo.ru">ojjo@ojjo.ru</a>
           </div>
           <div class="footer__item">
             <h6 class="footer__title">
@@ -601,7 +605,7 @@
         </div>
       </div>
     </footer>
-  </div> 
+  </div>
 
 
 
